--- a/tetris.html
+++ b/tetris.html
@@ -20,15 +20,14 @@
 			ctx = canvas.getContext("2d");
 			var tetromino1 = new Shape(1,19,-1,0,1,0,0,-1,"blue");
 			drawShape(ctx,tetromino1,tetromino1.color);
-			var tetromino2 = new Shape(2,0,1,0,1,1,2,1,"green");
+			var tetromino2 = new Shape(4,0,1,0,1,1,2,1,"green");
 			shape=tetromino2;
-			tetromino3=new Shape(5,0,1,0,0,1,1,1,"yellow");
+			tetromino3=new Shape(4,0,1,0,0,1,1,1,"yellow");
 			tetromino6=new Shape(4,0,0,1,0,2,1,0,"purple");
-			tetromino5=new Shape(8,0,0,1,0,2,0,3,"orange");
-			tetromino4=new Shape(7,0,0,1,0,2,-1,0,"red");
-			tetromino7=new Shape(9,0,0,1,0,2,0,3,"blue");
-	//		rotate(tetromino5);
-			tetromino8 = new Shape(0,1,-1,0,1,0,0,-1,"blue");
+			tetromino5=new Shape(4,0,0,1,0,2,0,3,"orange");
+			tetromino4=new Shape(4,0,0,1,0,2,-1,0,"red");
+			tetromino7=new Shape(4,0,0,1,0,2,0,3,"orange");
+			tetromino8 = new Shape(4,1,-1,0,1,0,0,-1,"blue");
 			rotate(tetromino8);
 			nextshape=[tetromino3,tetromino4,tetromino5,tetromino6,tetromino8,tetromino7]
 			drop(ctx,shape,shape);
@@ -48,35 +47,43 @@
 	function keyboard(e){
 		keypressed = e.keyCode;
 	}
-	
+  
 	function update(shape1){
-		n=0;
-//		while(n<keypressed.length){
-			if (keypressed==37&&shape1.minx>0){
-				shape1.x--;
-				calculate(shape1);
-				keypressed=false;
-			}
-			else if(keypressed == 40&&shape1.maxy<19){
-				shape1.y++;
-				calculate(shape1);
-				keypressed=false;
-			}
-			else if(keypressed ==39&&shape1.maxx<9){
+		if (keypressed==37&&shape1.minx>0){
+			a=shape1.minx;
+			shape1.x--;
+			calculate(shape1);
+			if (!(shape1.maxy<=19&&grid[shape1.y][shape1.x]==false && grid[shape1.ay1][shape1.ax1]==false && grid[shape1.ay2][shape1.ax2]==false && grid[shape1.ay3][shape1.ax3]==false)){
 				shape1.x++;
 				calculate(shape1);
-				keypressed=false;
 			}
-			else if(keypressed ==38){
-				rotate(shape1);
-				if (shape1.maxx>9 || shape1.minx<0 || shape1.maxy>19){
-					rotatec(shape1);
-				}
-				keypressed=false;
+			keypressed=false;
+		}
+		else if(keypressed == 40&&shape1.maxy<19){
+			shape1.y++;
+			calculate(shape1);
+			if (!(shape1.maxy<=19&&grid[shape1.y][shape1.x]==false && grid[shape1.ay1][shape1.ax1]==false && grid[shape1.ay2][shape1.ax2]==false && grid[shape1.ay3][shape1.ax3]==false)){
+				shape1.y--;
+				calculate(shape1);
 			}
-//		}
-		keypressed=false;
-		n=0;
+			keypressed=false;
+		}
+		else if(keypressed ==39&&shape1.maxx<9){
+			shape1.x++;
+			calculate(shape1);
+			if (!(shape1.maxy<=19&&grid[shape1.y][shape1.x]==false && grid[shape1.ay1][shape1.ax1]==false && grid[shape1.ay2][shape1.ax2]==false && grid[shape1.ay3][shape1.ax3]==false)){
+				shape1.x--;
+				calculate(shape1);
+			}
+			keypressed=false;
+		}
+		else if(keypressed ==38){
+			rotate(shape1);
+			if (!(shape1.maxy<=19&&shape1.maxx<=9&&shape1.minx>=0&&shape1.miny>=0&&grid[shape1.y][shape1.x]==false && grid[shape1.ay1][shape1.ax1]==false && grid[shape1.ay2][shape1.ax2]==false && grid[shape1.ay3][shape1.ax3]==false)){
+				rotatec(shape1);
+			}
+			keypressed=false;
+		}
 	}
 	
 	function drawBox(ctx,x,y,color){
@@ -165,7 +172,6 @@
 		grid[shape.ay1][shape.ax1]=shape.color;
 		grid[shape.ay2][shape.ax2]=shape.color;
 		grid[shape.ay3][shape.ax3]=shape.color;
-		a=shape.ay2;
 	}
 	
 	function eraseShape(ctx,shape){
@@ -181,10 +187,10 @@
 	}
 	
 	function drop(ctx,old,shape1){
-		update(shape1);
 		if (shape.maxy<=19){
 			eraseShape(ctx,old);
 		}
+		update(shape1);
 		if (shape.maxy<=19 && grid[shape1.y][shape1.x]==false && grid[shape1.ay1][shape1.ax1]==false && grid[shape1.ay2][shape1.ax2]==false && grid[shape1.ay3][shape1.ax3]==false){
 			oldshape=clone(shape1);
 			drawShape(ctx,shape1);
